test/syntaxerrors/TestJavaMissingRBrace.jdc
public class JavaMissingBrace {
    public static void main(String[] args) {
        System.out.println("Blah");
    }